--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://karando17:KBf7e3blsrXXSZuD@cluster0.w3avg.mongodb.net/google-books?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://karando17:f8akOQcTatAeVOEt@cluster0.w3avg.mongodb.net/google-books?retryWrites=true&w=majority
