--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/styles": "^4.11.2",
     "axios": "^0.18.0",
+    "bootstrap": "^4.5.3",
+    "mdbreact": "^5.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.3"
